--- a/css/style.css
+++ b/css/style.css
@@ -23,12 +23,20 @@ html  {
 }
 
 body {
-    font-family: Grandstander;
-    font-size: 25px;
+    font-family: 'Mali', cursive;
+    font-size: 5px;
     color: #272323;
+    background-image: url("../image/items/background.jpg");
 }
 
 
+.mtop {
+    margin-top: 130px;
+}
+
+.rounded {
+    border-radius: 30px 30px 30px 30px;
+}
 
 .textJustify {
     text-align: justify;
@@ -56,9 +64,6 @@ body {
 }
 
 
-.navbar-dark:hover {
-    color: #74EEB3;
-}
 
 .fa-instagram:hover {
     color: #D6A6EC;
@@ -84,24 +89,18 @@ body {
     padding-bottom: 5rem;
 }
 
-.features-icons-icon {
-    font-size: 3rem;
-    margin-bottom: 1rem;
-    color: #00cc99;
-}
-
-.txt-white {
-    color: #FAF7F0;
-}
 
 .menubar {
     background-color: #98A8F8;
 }
 
+.hr-color {
+    border: 20px solid #98A8F8;
+}
+
 .textJustify{
     text-align: justify;
 }
-
 
 
 
@@ -129,47 +128,4 @@ body {
 
 #proImg{
     text-align: center;
-
-}
-
-
-/* CSS แต่ละขนาดหน้าจอ */
-@media (min-width: 1400px) {
-    /* xxl */
-    #row1 {
-        background-position:center;
-        background-size: cover;
-    }
-}
-
-@media (min-width: 1200px) and (max-width: 1399px) {
-    /* xl */
-    #row1 {
-        background-color: #FBDA61;
-        background-image: linear-gradient(45deg, #FBDA61 0%, #FF5ACD 100%);
-    }
-}
-
-@media (min-width: 992px) and (max-width: 1199px) {
-    /* lg */
-    row1 {
-        background-color: #8EC5FC;
-        background-image: linear-gradient(62deg, #8EC5FC 0%, #E0C3FC 100%);
-    }
-}
-
-@media (min-width: 768px) and (max-width: 991px) {
-    /* md */
-    #row1 {
-        background-color: #FFE53B;
-        background-image: linear-gradient(147deg, #FFE53B 0%, #FF2525 74%);
-    }
-}
-
-@media (max-width: 767px) {
-    /* sm */
-    #row1 {
-        background-color: #FA8BFF;
-        background-image: linear-gradient(45deg, #FA8BFF 0%, #2BD2FF 52%, #2BFF88 90%);
-    }
 }
